[gd_scene load_steps=10 format=3 uid="uid://epqrumrbn476"]

[ext_resource type="Script" path="res://Scenes/UI/hud.gd" id="1_nvlj3"]
[ext_resource type="FontFile" uid="uid://yv0f1wvan643" path="res://Assets/UI/INVASION2000.TTF" id="1_o7kul"]
[ext_resource type="Texture2D" uid="uid://u1tiv0vy4433" path="res://Assets/UI/health bar outline x1.png" id="3_15gki"]

[sub_resource type="Animation" id="Animation_ldihm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m16wy"]
resource_name = "reload"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jfx2s"]
_data = {
"RESET": SubResource("Animation_ldihm"),
"reload": SubResource("Animation_m16wy")
}

[sub_resource type="Animation" id="Animation_wb2in"]
resource_name = "Fade_out"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"stop"
}]
}

[sub_resource type="Animation" id="Animation_pcc4r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qrhui"]
_data = {
"Fade_out": SubResource("Animation_wb2in"),
"RESET": SubResource("Animation_pcc4r")
}

[node name="HUD" type="Control" groups=["HUD"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nvlj3")

[node name="HurtPanel" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 10.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_o7kul")
theme_override_font_sizes/font_size = 20
text = "00:00:00"
horizontal_alignment = 1

[node name="HeartContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 25.0
offset_top = 25.0
theme_override_constants/separation = 5

[node name="NormalHearts" type="HBoxContainer" parent="HeartContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GoldenHearts" type="HBoxContainer" parent="HeartContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AmmoContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 25.0
offset_top = 75.0

[node name="ReloadLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -72.0
offset_right = 111.5
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_o7kul")
theme_override_font_sizes/font_size = 30
text = "RELOAD!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReloadLabel"]
libraries = {
"": SubResource("AnimationLibrary_jfx2s")
}

[node name="WaveLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -211.0
offset_right = 108.0
offset_bottom = -153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_o7kul")
theme_override_font_sizes/font_size = 25
text = "ROOM CLEARED"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="WaveLabel"]
libraries = {
"": SubResource("AnimationLibrary_qrhui")
}

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -376.0
offset_right = 376.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_15gki")
